closes #78: Fix footer spacing

--- a/dev/src/assets/css/site/elements/_global-footer.scss
+++ b/dev/src/assets/css/site/elements/_global-footer.scss
@@ -6,6 +6,7 @@
   border-top: 1px solid var(--text-caption);
   padding-top: 2rem;
   padding-bottom: 2rem;
+  margin-top: 7rem;
   * {
     font-size: 1.3rem;
     width: 100%;
@@ -14,6 +15,19 @@
     text-align: center;
     max-width: none;
   }
+  
+  @media (480px <= width < 1200px) {
+    border-top: 0;
+    width: 100%;
+    padding-left: 8.25%;
+    padding-right: 8.25%;
+    padding-top: 0;
+    .inner {
+      padding-top: 2rem;
+      border-top: 1px solid var(--text-caption);
+    }
+  }
+
   @media (width < 480px) {
     width: 100%;
     max-width: none;
